prototypes/taskwarrior/ytt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: task
  name: task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task
  template:
    metadata:
      labels:
        app: task
    spec:
      volumes:
        - name: task
          persistentVolumeClaim:
            claimName: task
      containers:
      - image: ghcr.io/gothenburgbitfactory/taskchampion-sync-server:main
        name: taskchampion-sync-server
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
        args:
          - "--data-dir"
          - "/var/lib/taskchampion-sync-server"
          - "--allow-client-id"
          - "465600ee-b5a5-11ef-894c-d7569779cf2c"
        imagePullPolicy: Always
        volumeMounts:
          - name: task
            mountPath: /var/lib/taskchampion-sync-server
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
