prototypes/taskwarrior/ytt/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: task
  name: task
spec:
  ports:
  - name: http 
    port: 8080
    targetPort: http
  selector:
    app: task
  type: LoadBalancer
